nodejs-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
spec:
  selector:
    app: nodejs-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: nodejs-backend
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
      - name: nodejs-backend
        image: digitaltulbo/backend
        ports:
        - containerPort: 5000
